--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Jayasekara Kapukotuwa
 logo: /assets/img/Navoda.jpg
-description: Technological University of the Shannon
-show_downloads: true
+# description: Technological University of the Shannon
+email: j.kapukotuwa@research.ait.ie
+# show_downloads: true
 theme: jekyll-theme-minimal
