--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jayasekara Kapukotuwa
-logo: /assets/img/Navoda.jpg
+logo: /assets/img/navoda_round.png
 # description: Technological University of the Shannon
 # show_downloads: true
 theme: jekyll-theme-minimal
